Correct a bit too big font size

--- a/css/custom.zh.css
+++ b/css/custom.zh.css
@@ -9,8 +9,8 @@
 
 body {
 	font-family: 'Noto Sans SC', sans-serif;
-	font-size: 18px;
-	line-height: 30px;
+	font-size: 17px;
+	line-height: 28px;
 	color: #fff;
 	font-weight: 500;
 	background: url(../images/bg-pattern.png);
